Fix tinyscrollbar after hide-scrollbar animation

--- a/sass/tabs_container.scss
+++ b/sass/tabs_container.scss
@@ -61,6 +61,7 @@
 
   .console-tabs-left {
     min-width: 50%;
+    border-right: solid 1px #dadada;
 
     .viewport,
     .overview {
@@ -69,7 +70,6 @@
       @include display-flex();
       @include flex-flow(row);
       overflow: auto;
-      border-right: solid 1px #dadada;
       @include scrolling-shadows($background-color: #f7f7f7);
     }
 
@@ -78,7 +78,6 @@
       @include display-flex();
       @include flex-flow(row);
       overflow: auto;
-      border-right: solid 1px #dadada;
       @include scrolling-shadows($background-color: #f7f7f7);
     }
   }
